# self-study-python

./: .gitignore  LICENSE  README.md  pyproject.toml
apps/api-example/: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  example.env  pyproject.toml
apps/api-example/.devcontainer/: Celery.env  CeleryFlower.Dockerfile  CeleryWorker.Dockerfile  Redis.env
apps/api-example/src/: main.py
apps/api-example/src/account/: __init__.py  account_container.py
apps/api-example/src/account/domain/: __init__.py  account.py  event.py
apps/api-example/src/account/domain/interface/: __init__.py  account_authenticator.py  account_email_sender.py  account_email_template_renderer.py  account_repository.py  account_verification_email_sender.py
apps/api-example/src/account/domain/value_object/: __init__.py  email_address.py  email_content.py  email_subject.py  id.py  name.py  password.py  time.py  (+2 more)
apps/api-example/src/account/infra/: __init__.py
apps/api-example/src/account/use_case/: __init__.py
apps/api-example/src/app/: __init__.py  app.py  app_container.py
apps/api-example/src/app/domain/: __init__.py  api_response.py  app.py
apps/api-example/src/app/infra/: __init__.py
apps/api-example/src/shared/: __init__.py  command.py  config.py  entity.py  event.py  query.py  value_object.py
apps/api-example/test/: conftest.py
apps/api-example/test/account/domain/: account_test.py
apps/api-example/test/app/: app_e2e_test.py
apps/api-example/test/shared/: entity_test.py
apps/automaton/: README.md  pyproject.toml
apps/automaton/automaton/apps/cli/: __init__.py  table.py
apps/automaton/automaton/modules/: path.py  subtitle.py  subtitles.py  youtube_download.py
apps/automaton/src/automaton/: __main__.py
apps/automaton/src/automaton/modules/: color.py  pdf.py  series.py  sqlite_util.py  text.py
apps/automaton/tests/resources/: pokemon-unbound-national-pokedex.csv
apps/code-generator/: pyproject.toml
apps/code-generator/code_generator/modules/project/: __init__.py  dto.py  project.py  project_service.py
apps/code-generator/code_generator/modules/template/: __init__.py
apps/ltx/: .ltxrc-example.json  .ltxrc.json  README.md  pyproject.toml
apps/ltx/ltx/: __exceptions__.py  __init__.py  __main__.py  __types__.py  ltx_cli.py  ltx_config.py  ltx_container.py  ltx_service.py  ltx_service_factory.py
apps/ltx/ltx/ltxrc/: __exceptions__.py  __init__.py  __types__.py  ltxrc_abc.py  ltxrc_json.py
apps/ltx/ltx/utils/: __init__.py  latexmk.py  path_resolve_absolute.py  process_runner.py  texinputs.py
apps/ltx/test/tex/src/: main.tex
apps/storage/: pyproject.toml
apps/storage/src/repositories/fakes/: sqlalchemy_postgres_fake_repository.py
apps/storage/src/utils/: all_fields_optional.py
apps/url-shortner/: pyproject.toml
apps/video/: pyproject.toml
apps/video/video/: __main__.py
apps/video/video/modules/: __init__.py
apps/video/video/modules/series/: __init__.py  _types.py  series.py
apps/video/video/modules/subtitle/: __init__.py  millisecond.py  subrip.py
modules/chronos/: pyproject.toml
modules/chronos/chronos/time/: time.py
modules/cqrs/: pyproject.toml
modules/cqrs/cqrs/: __init__.py  abstracts.py  cqrs.py  exceptions.py  types.py
modules/decorar/: pyproject.toml
modules/decorar/decorar/: config.py  provider.py
modules/fs/: pyproject.toml
modules/fs/fs/: __init__.py
modules/fs/fs/directory/: directory.py  exceptions.py
modules/fs/fs/file/: __init__.py  exceptions.py  file.py
modules/fs/fs/file_system/: __init__.py  file_system.py
modules/rpc/: pyproject.toml  rpc_server.py  rpc_socket.py  types.py
modules/rpc/rpc/: rpc_client.py  rpc_server.py  value_objects.py
modules/rpc/rpc/abstracts/: __init__.py  handler_register.py  rpc_socket.py  serialization.py
modules/rpc/rpc/implementation/: __init__.py  handler_register.py  json_rpc_serializer.py  rpc_socket.py
modules/seedwork/: .editorConfig  .gitignore  .pdm.toml  LICENSE  README.md  pyproject.toml
modules/seedwork/src/seedwork/abc/: __init__.py  entity.py  factory.py  handler.py  handler_async.py  repository.py  repository_async.py  use_case.py  use_case_async.py
modules/seedwork/src/seedwork/mixin/: base.py  entity.py  entity_props.py  entity_props_test.py  env.py  value_object.py
modules/seedwork/src/seedwork/type/: __init__.py  command.py  event.py  query.py
modules/seedwork/src/seedwork/util/: __init__.py  event_manager.py  module.py  notification_error_exception.py  notification_error_props.py  notification_manager.py
modules/tools/: .gitignore  pyproject.toml  rename_files.py
modules/tools/cli/: main
modules/tools/commontools/: pyproject.toml
modules/tools/commontools/tests/: test_commontools.py
modules/tools/data_processor/: .gitignore  pyproject.toml
modules/tools/data_processor/.devcontainer/: .env.example  Dockerfile  devcontainer.json  docker-compose.yml
modules/tools/django/mysite/mysite/: settings.py
modules/tools/django/mysite/polls/: models.py  views.py
modules/tools/downloader/torrent_downloader/: pyproject.toml
modules/tools/downloader/torrent_downloader/tests/: test_torrent_downloader.py
modules/tools/infrastructure/: docker-compose.yml
modules/tools/infrastructure/mysql/data/: ca.pem  client-cert.pem  public_key.pem  server-cert.pem
modules/tools/infrastructure/redis/data/: dump.rdb
modules/tools/inu-analyzer/: .pdm.toml  README.md  pyproject.toml
modules/tools/inu-analyzer/src/_inu_analyzer/: .pdm.toml  README.md  pyproject.toml
modules/tools/message_processor/: pyproject.toml
modules/tools/message_processor/tests/: test_message_processor.py
modules/tools/mlops/: README.md  pyproject.toml
modules/tools/mlops/src/: evaluate.py  main.py  preprocessing.py  timer_decorator.py  training.py  visualize.py
modules/tools/queue/: docker-compose.yml
modules/tools/queue/examples/: SMR.py  app.py  tasks.py
modules/tools/queue/rdata/: dump.rdb
modules/tools/queue/src/: app_controller.py  app_service.py
modules/tools/reports/notebooks/: plots.ipynb
modules/tools/reports/scripts/: main.py
(+117 files in other folders)
