[project]
name = "self-study-python"
version = "0.0.0"
description = "A monorepo designed for learning and practicing Python programming"
authors = [{ name = "olatejulian", email = "julian.lf.olate@gmail.com" }]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.mypy]
disable_error_code = "import-untyped"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["ruff>=0.5.6", "mypy>=1.11.1"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]
