[project]
name = "automaton"
version = "0.0.0"
description = "a program to automate boring stuffs"
authors = [{ name = "olatejulian", email = "julian.lf.olate@gmail.com" }]
dependencies = [
    "pytube>=15.0.0",
    "validators>=0.28.1",
    "typer>=0.12.3",
    "pyinstaller>=6.8.0",
    "pypdf>=4.3.0",
    "lagom>=2.6.0",
    "rpc",
]
requires-python = "<3.13,>=3.12"
readme = "README.md"
license = { text = "MIT" }

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = []

[tool.pdm.scripts]
auto = { call = "automaton.__main__:cli" }
mkbin = "pyinstaller -Fyn auto src/automaton/__main__.py"
