[project]
name = "code-generator"
version = "0.0.0"
description = "A cli to generate code and projects templates"
authors = [{ name = "olatejulian", email = "julian.lf.olate@gmail.com" }]
dependencies = [
    "typer>=0.12.4",
    "pyyaml>=6.0.2",
    "pydantic>=2.8.2",
    "jinja2>=3.1.4",
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.3.2"]

[tool.pdm.scripts]
test = "pytest"
