[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{ email = "julian.lf.olate@gmail.com", name = "olatejulian" }]
dependencies = [
    "jinja2>=3.1.4",
    "pydantic>=2.8.2",
    "pyyaml>=6.0.2",
    "typer>=0.12.4",
]
description = "A cli to generate code and projects templates"
license = { text = "MIT" }
name = "code-generator"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.0.0"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = ["pytest>=8.3.2"]

[tool.pdm.scripts]
test = "pytest"
