[project]
name = "url-shortner"
version = "0.1.0"
description = ""
authors = [{ name = "olatejulian", email = "julian.lf.olate@gmail.com" }]
dependencies = []
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
