[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{ email = "julian.lf.olate@gmail.com", name = "olatejulian" }]
dependencies = ["typer>=0.12.5"]
description = "cli for handle video files"
license = { text = "MIT" }
name = "video"
readme = "README.md"
requires-python = ">=3.12,<3.13"
version = "0.1.0"

[tool.pdm]
distribution = true

[tool.pdm.scripts]
cli = { call = "video.__main__:main" }
compile = { cmd = "pyinstaller -Fyn video video/__main__.py" }

[tool.pdm.dev-dependencies]
dev = ["pyinstaller>=6.10.0"]
