[project]
name = "cqrs"
version = "0.0.0"
description = "A module to handle cqrs design patterns"
authors = [
    {name = "olatejulian", email = "julian.lf.olate@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
