[project]
name = "decorar"
version = "0.1.0"
description = "yet another depedency injector"
authors = [
    {name = "olatejulian", email = "julian.lf.olate@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
