[project]
name = "fs"
version = "0.0.0"
description = "A module to handle filesystem operations"
authors = [{ name = "olatejulian", email = "julian.lf.olate@gmail.com" }]
dependencies = []
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
