[project]
name = "tools"
version = "0.0.0"
description = "Default template for PDM package"
authors = [{ name = "olatejulian", email = "julian.lf.olate@gmail.com" }]
dependencies = []
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
