
[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["olatejulian <julian.lf.olate@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
