[project]
name = "inu_analyzer"
version = "0.1.0"
description = ""
authors = [
    {name = "olatejulian", email = "julian.lf.olate@gmail.com"},
]
dependencies = [
    "pydantic>=1.10.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
